fixing the button visibility

--- a/nextjs-olga-website/components/navigation/MainNavigation.module.scss
+++ b/nextjs-olga-website/components/navigation/MainNavigation.module.scss
@@ -52,6 +52,7 @@
       text-decoration: none;
       color: $white;
       cursor: pointer;
+      opacity: 0;
       transition: 0.3s ease-in-out;
 
       @media screen and (min-width: $break-to-tablet) {
